--- a/package.json
+++ b/package.json
@@ -9,10 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@types/leaflet": "^1.9.21",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-status-bar": "~3.0.9",
+    "leaflet": "^1.9.4",
+    "lodash.debounce": "^4.0.8",
+    "lucide-react-native": "^0.562.0",
+    "moti": "^0.30.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
+    "react-native": "0.81.5",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-svg": "^15.15.1",
+    "react-native-web": "^0.21.0",
+    "zustand": "^5.0.10"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.9",
+    "tailwindcss": "^3.4.19"
+  }
 }
